# rust-wasm-game-of-life

./: .gitignore  .npmignore  Cargo.toml  README.md  package.json  tsconfig.json  webpack.config.js
js/: index.ts
js_src/: game_of_life.ts  index.ts
rust_src/: lib.rs
static/: index.html
