[package]
authors = ["Oakley Peavler <oakleypeavler@gmail.com>"]
categories = ["wasm", "game of life"]
description = "Game of Life"
edition = "2018"
license = "MIT"
name = "rust-wasm-game-of-life"
readme = "README.md"
repository = "https://github.com/oakleyp/rust-wasm-game-of-life"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]
name = "rust_src"
path = "rust_src/lib.rs"

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[features]
# If you uncomment this line, it will enable `wee_alloc`:
#default = ["wee_alloc"]

[dependencies]
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = "0.2.45"
js-sys = "0.3.22"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. However, it is slower than the default
# allocator, so it's not enabled by default.
wee_alloc = {version = "0.4.2", optional = true}

fixedbitset = "0.4.1"

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
features = ["console"]
version = "0.3.22"

# These crates are used for running unit tests.
[dev-dependencies]
futures = "0.3.19"
wasm-bindgen-futures = "0.4.28"
wasm-bindgen-test = "0.3.28"
